- Fixed bug about displaying search results in pages that sidebar was refreshed
- Added headers in order to eliminate browser cache in sidebar
- Fixed skill-gap tests manual assignments issue
- Fixed bug in manually sending pending notifications that was introduced in 3.6.4 build 7725
- Added tooltip with organization information in employees list

=== Version 3.6.4 build 7725 ===
- Rearranged system settings menu for speed and tidyness
- Added web server authentication feature
- Fixed job descriptions listing full branches path
- Fixed required training handles not working in IE
- Fixed professor account being affected by course rules
- Fixed archive sorting not working
- Removed refereneces to deprecated mb_ereg_replace()
- Fixed scorm export not taking into account media files
- Added link in unit operations to open unit in popup window
- Fixed default string sorting being affected by case
- IE6 compatibility fixes
- Fixed subscription payments not being properly handled by the system
- Fixed issue about students/supervisors deleting personal files
- Fixed toggling horizontal sidebar issue in IE7
- Fixed SCORM completion issue when commit is called through onUnload and iframe layout is used
- Supervisor's branches report list does not return branches to which he/she does not have access to
- Fixed issue about email in notifications sent


=== Version 3.6.3 build 7602 ===
- Added disable payments option
- Added toggle editor in html mode in all editor instances
- Added unit option for extending object at screen dimensions
- Replacing textbox with textarea in comment field of project score
- Fixed progress not displaying projects issue
- Fixed error while sending messages to "My students" from professor account
- Fixed path error when creating new user
- Fixed user type assignments when registering automatically to courses/lessons through a default group
- Fixed memory overconsumption during calculation of users' traffic statistics